fixed about me spacing

--- a/css/main.css
+++ b/css/main.css
@@ -696,7 +696,7 @@ img#about-photo {
 }
 
 #about {
-	padding: 10% 0;
+	padding: 5% 0;
 }
 
 .about-text {
